# faster-fasta

./: .gitignore  Cargo.toml  README.md  fasta_dedup.rs  fasta_dna2rna.rs  fasta_revcomp.rs  fasta_sample.rs  fasta_sort.rs  faster_fasta.py  faster_fasta.rs  fastq_deinterleave.rs  fastq_filter.rs  fastq_interleave.rs  fastq_stats.rs  fastq_to_fasta.rs  fastq_trim.rs  pyproject.toml  shared.rs
src/: shared.rs
