[package]
name = "faster-fasta"
version = "0.1.0"
edition = "2021"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Command-line utilities for processing memory-mapped FASTA and FASTQ files"
readme = "README.md"
license = "Apache-2.0"
keywords = ["bioinformatics", "fasta", "fastq", "cli", "sequence-analysis"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/ashvardanian/faster-fasta"

[dependencies]
clap = { version = "4.5", features = ["derive"] } # CLI argument parsing
memmap2 = "0.9"                                   # Memory-mapped file I/O
stringzilla = "4.2.3"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization, slower compile
opt-level = 3     # Maximum optimization
strip = true      # Strip symbols for smaller binary

[[bin]]
name = "fasta-dedup"
path = "fasta_dedup.rs"

[[bin]]
name = "fasta-sample"
path = "fasta_sample.rs"

[[bin]]
name = "fasta-sort"
path = "fasta_sort.rs"

[[bin]]
name = "fasta-revcomp"
path = "fasta_revcomp.rs"

[[bin]]
name = "fasta-dna2rna"
path = "fasta_dna2rna.rs"

[[bin]]
name = "fastq-filter"
path = "fastq_filter.rs"

[[bin]]
name = "fastq-trim"
path = "fastq_trim.rs"

[[bin]]
name = "fastq-stats"
path = "fastq_stats.rs"

[[bin]]
name = "fastq-to-fasta"
path = "fastq_to_fasta.rs"

[[bin]]
name = "fastq-interleave"
path = "fastq_interleave.rs"

[[bin]]
name = "fastq-deinterleave"
path = "fastq_deinterleave.rs"
