[package]
name = "faster-fasta"
version = "0.1.0"
edition = "2021"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Command-line utilities for processing memory-mapped FASTA and FASTQ files"
readme = "README.md"
license = "Apache-2.0"
keywords = ["bioinformatics", "fasta", "fastq", "cli", "sequence-analysis"]
categories = ["command-line-utilities", "science"]
repository = "https://github.com/ashvardanian/faster-fasta"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
stringzilla = "4.2.3"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[lib]
name = "faster_fasta"
path = "src/lib.rs"

[[bin]]
name = "fasta-dedup"
path = "bin/fasta_dedup.rs"

[[bin]]
name = "fasta-sample"
path = "bin/fasta_sample.rs"

[[bin]]
name = "fasta-sort"
path = "bin/fasta_sort.rs"

[[bin]]
name = "fasta-revcomp"
path = "bin/fasta_revcomp.rs"

[[bin]]
name = "fasta-dna2rna"
path = "bin/fasta_dna2rna.rs"

[[bin]]
name = "fastq-filter"
path = "bin/fastq_filter.rs"

[[bin]]
name = "fastq-trim"
path = "bin/fastq_trim.rs"

[[bin]]
name = "fastq-stats"
path = "bin/fastq_stats.rs"

[[bin]]
name = "fastq-to-fasta"
path = "bin/fastq_to_fasta.rs"

[[bin]]
name = "fastq-interleave"
path = "bin/fastq_interleave.rs"

[[bin]]
name = "fastq-deinterleave"
path = "bin/fastq_deinterleave.rs"
