[project]
name = "faster-fasta"
description = "Command-line utilities for processing memory-mapped plain-text FASTA files"
version = "0.1.0"
dependencies = ["stringzilla"]
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Ash Vardanian", email = "1983160+ashvardanian@users.noreply.github.com" },
]
requires-python = ">=3.6"
keywords = ["bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
addopts = "-s -x --doctest-modules"

# Configuration options for the Black formatter:
# https://black.readthedocs.io/en/latest/usage_and_configuration/the_basics.html#where-black-looks-for-the-file
[tool.black]
line-length = 120                  # Set line length to the same value as in `.clang-format` for modern wide screens
target-version = ['py36', 'py312']